# Nyx

./: .gitignore  .gitmodules  .travis.yml  CITATION  CITATION.md  CMakeLists.txt  CONTRIBUTING.md  README.md  about.html  build_and_deploy.sh  build_docs.sh  help.html  id_rsa_travis.enc  index.html  license.txt  papers.html  requirements.txt  science.html  tab_exterminator.sh  who.html
Exec/: CMakeLists.txt  Make.Nyx  Make.package  Prob.H  Prob_param.H
Exec/AMR-density/: CMakeLists.txt  GNUmakefile  GNUmakefile.cuda  Make.package  Nyx_error.cpp  Prob.H  Prob.cpp  Prob_3d.F90  Prob_error.cpp  Tagging_3d.f90  inputs  inputs.cuda  inputs.rt  inputs_nohydro.rt
Exec/AMR-zoom/: CMakeLists.txt  GNUmakefile  Make.package  Prob.H  Prob.cpp  Prob_error.cpp  Tagging_3d.f90  inputs
Exec/AssignDensityTest/: GNUmakefile  Make.package  Nyx_error.cpp  Prob_3d.f90  Tagging_3d.f90  inputs  probin
Exec/DrivenTurbulence/: CMakeLists.txt  Derive_3d.f90  Derive_prob_3d.f90  GNUmakefile  Make.package  Nyx_sources.cpp  Prob.H  Prob.cpp  Prob_3d.f90  Prob_error.cpp  Tagging_3d.f90  ext_src_3d.f90  ext_src_force_3d.f90  heat_cool_stubs.f90  inputs  inputs.regtest  integrate_state_force_3d.f90  probdata.f90  probin
Exec/HDF5_example/: GNUmakefile  Make.package  Nyx_output.cpp  inputs  knl.sl
Exec/HeatCoolTests/: GNUmakefile  Make.package  example_setup.sh  nyx_main.cpp
Exec/Henson/: all.chai  amr-info.chai  nyx-only.chai  particles.chai  simple.chai
Exec/HydroTests/: CMakeLists.txt  GNUmakefile  Make.Nyx  Prob.H  Prob.cpp  Prob_error.cpp  bc_fill.cpp  inputs-sod-x  inputs-sod-y  inputs-sod-z  inputs-test2-x  inputs-test2-y  inputs-test2-z  inputs-test3-x  inputs-test3-y  inputs-test3-z  inputs.3d.sph.sedov  inputs.3d.sph.testsuite.sedov  inputs.regtest.sedov  inputs.regtest.sod  inputs.regtest.test2  inputs.regtest.test3  inputs.restarttest.test2
Exec/LyA/: CMakeLists.txt  GNUmakefile  GNUmakefile.ascent  GNUmakefile.cuda  GNUmakefile.cuda-ascent  GNUmakefile.summit  Make.package  Nyx_error.cpp  Prob.H  Prob.cpp  Prob_3d.F90  Prob_3d.f90  Tagging_3d.f90  all.chai  amr-info.chai  ascent_actions.yaml  ascent_actions_nohydro.yaml  ascent_actions_slicefile.yaml  ascent_options.json  build_compressors.sh  fcvfun.f90  fcvode_extras.f90  fcvode_wrapper.f90  inputs  inputs-file-strong  inputs-random-strong  inputs-uniform-strong  inputs.256.noreduceverb  inputs.cuda  inputs.rt  inputs.rt.garuda  inputs.small.dsc  inputs.summit  inputs_128  inputs_128_32grids  inputs_compare_1024_nohydro  inputs_gimlet_in_transit.dsc  inputs_hydro1.rt  inputs_nohydro.rt  integrate_state_fcvode_3d.f90  (+20 more)
Exec/LyA_AGN/: CMakeLists.txt  GNUmakefile  Prob.H  Prob_3d.f90  Tagging_3d.f90  inputs  inputs.rt  integrate_state_vode_3d.f90  probin
Exec/LyA_Neutrinos/: 32.nyx  CMakeLists.txt  GNUmakefile  GNUmakefile.cuda  Prob.H  Prob_3d.F90  ascent_actions.yaml  inputs  inputs.no_hydro_64  inputs.rt  inputs.rt.battra  inputs.small.dsc  inputs_gimlet_in_transit.dsc  probdata.f90
Exec/MiniSB/: CMakeLists.txt  GNUmakefile  Make.package  Nyx_error.cpp  Prob.H  Prob.cpp  Prob_3d.f90  Tagging_3d.f90  fixed_grids  ic_sb_32.ascii  inputs.32  inputs.32.plot_z  inputs.32.ref  inputs.analysis  particle_file.small  probin
Exec/ParticleFilterTest/: 32.nyx  64sssss_20mpc.nyx  CMakeLists.txt  DarkMatterParticleContainer.H  DarkMatterParticleContainer.cpp  NeutrinoParticleContainer.H  Nyx.H  Nyx.cpp  NyxParticleContainer.H  NyxParticles.cpp  Nyx_advance.cpp  Nyx_advance_particles.cpp  comoving.cpp  inputs  inputs.rt.garuda
Exec/ParticleMeshTest/: GNUmakefile  Prob.H  Prob.cpp  Prob_error.cpp  fixed_grids.mass  inputs.2line  inputs.2line.restarttest  inputs.mass.nosub  inputs.mass.sub  particle_file.2line  particle_file.mass
Exec/ParticleOnlyTest/: GNUmakefile  Prob.H  Prob.cpp  inputs.2line  inputs.2line.restarttest  inputs.load  inputs.mass.nosub  inputs.mass.sub
Exec/RayTracing-Expanding/: GNUmakefile  atomic_rates.f90  inputs
Exec/RayTracing-NonComoving/: GNUmakefile  Prob_3d.f90  inputs.3d.sph  probin.3d.sph
Exec/RegressionTest/: CMakeLists.txt  GNUmakefile  Make.package  Nyx_error.cpp  Prob.H  Prob_3d.F90  Prob_3d.f90  Tagging_3d.f90  inputs.2line  inputs.2line.restarttest  inputs.mass.nosub  inputs.mass.sub  probin
Exec/SanityCheck/: GNUmakefile
Exec/SantaBarbara/: GNUmakefile  Nyx_error.cpp  Prob.H  Prob.cpp  Prob_3d.f90  Prob_error.cpp  Tagging_3d.f90  inputs  pbs_hopper  pbs_hopper_omp  probin
Exec/Scaling/: AMReX_buildInfo.cpp  GNUmakefile  Make.package  Nyx.H  Nyx.cpp  NyxParticles.cpp  Nyx_error.cpp  Particles.H  Prob.H  Prob.cpp  Prob_3d.F90  Prob_3d.f90  Prob_error.cpp  Tagging_3d.f90  cori.knl  inputs  inputs.256.noreduceverb  inputs_short  integrate_state_vode_3d.f90  probin  profile.sh  run_cudashort.summit  run_short.summit  test.sh
Exec/TurbForce/: Derive_forcing.cpp  GNUmakefile  inputs  inputs.regtest  integrate_state_force_3d.f90  turbforce.f90
Source/: AGNParticleContainer.H  AGNParticleContainer.cpp  CMakeLists.txt  DarkMatterParticleContainer.H  DarkMatterParticleContainer.cpp  IndexDefines.H  Make.package  NeutrinoParticleContainer.H  NeutrinoParticleContainer.cpp  Nyx.H  Nyx.cpp  NyxBld.cpp  NyxParticleContainer.H  NyxParticles.cpp  Nyx_F.H  Nyx_advance.cpp  Nyx_halos.cpp  Nyx_hydro.cpp  Nyx_nd.f90  Nyx_output.cpp  Nyx_slice.H  Nyx_slice.cpp  ParticleDeposition.cpp  advance_particles.cpp  agn_3d.f90  agn_F.H  agn_overlap_3d.f90  agn_params.f90  agn_particle_mod.f90  comoving.cpp  comoving_nd.f90  comoving_params.f90  compute_hydro_sources.cpp  eos_params.f90  main.cpp  meth_params.F90  meth_params.f90  nyx_main.cpp  particle_mod.f90  prob_params.f90  (+12 more)
Source/AGN/: AGN_halos.cpp  AGN_sources.cpp  CMakeLists.txt  Make.package  Makefile  agn_3d.f90  agn_F.H  agn_geometry.f90  agn_mesh.f90  agn_models.f90  agn_params.f90  agn_random.f90  agnug.f90  meth_params.f90  particle_mod.f90
Source/Constants/: CMakeLists.txt  Make.package  constants_cgs.f90  constants_cosmo.H  constants_cosmo.f90
Source/DerivedQuantities/: CMakeLists.txt  Derive.H  Derive.cpp  Derive_3d.f90  Derive_F.H  Make.package  (+4 more)
(+1260 files in other folders)
